<resources>
    <string name="app_name">Ace</string>
    <string name="ace_logo">Ace logo</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_pic">Choose a Profile picture</string>
    <string name="first_name">First name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? <font color="#FA6400">Login</font></string>
    <string name="phone_number">Phone</string>
    <string name="phone_number_">Phone*</string>
    <string name="email">Email</string>
    <string name="last_name">Last name</string>
    <string name="or">OR</string>
    <string name="signup_google">Signup with Google</string>
    <string name="dont_have_an_accont_signup">Don\'t have an account? <font color="#FA6400">Signup</font></string>
    <string name="login">Login</string>
    <string name="login_google">Login with Google</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="profile_picture">Profile picture</string>
    <string name="ok">Ok</string>
    <string name="err_msg_field">Please, fill this field to continue</string>
    <string name="err_desc_field">Please, let us know a bit more about the outcome</string>
    <string name="err_msg_email">Please, enter your email to continue</string>
    <string name="err_msg_invalid_email">Invalid Email</string>
    <string name="err_msg_pass">Please, enter a password to continue</string>
    <string name="err_msg_pass_short">Your password must be at least 6 characters long</string>
    <string name="err_msg_pass_match">The passwords do not match</string>
    <string name="home">Home</string>
    <string name="wishlist">Wishlist</string>
    <string name="new_ad">New Ad</string>
    <string name="settings">Settings</string>
    <string name="login_email_link">Get Email Link</string>
    <string name="forgot_password">Forgot your Password?</string>
    <string name="resend_verification">Resend Email Verification link</string>
    <string name="personal_details">Personal Details</string>
    <string name="business_details">Business Details</string>
    <string name="change_email">Change Email</string>
    <string name="my_ads">My Ads</string>
    <string name="my_feedback">My Feedback</string>
    <string name="give_feedback">Give Feedback</string>
    <string name="about_us">About Us</string>
    <string name="delete_my_account">Delete My Account</string>
    <string name="logout">Log out</string>
    <string name="change_password">Change Password</string>
    <string name="save">Save Changes</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="business_name">Business Name</string>
    <string name="description">Description</string>
    <string name="description_">Description*</string>
    <string name="address">Address</string>
    <string name="ace_android_app">ACE Android App</string>
    <string name="app_desc">Discover, Sell and Connect on our online market place.\nFind what you need, sell your products, and connect with trusted vendors.</string>
    <string name="developed_by">Developed by:</string>
    <string name="developers">Olorunfemi Elias Oyewole\nAfari Amo Jedidiah\nShadrack Odametey</string>
    <string name="final_project">as part of Our Final Project</string>
    <string name="my_mail">eliasikechi14@gmail.com</string>
    <string name="for_more_info">For more info, please contact:</string>
    <string name="sample_review">It was a successful purchase, but the delivery took longer than expected</string>
    <string name="leave_feedback">Leave Feedback</string>
    <string name="use_business_details">Use Business details on your Ads</string>
    <string name="category_1">Category 1</string>
    <string name="categories">Categories</string>
    <string name="category">Category</string>
    <string name="category_">Category*</string>
    <string name="location">Location</string>
    <string name="back_arrow">back arrow</string>
    <string name="product_image">product image</string>
    <string name="boosted">Boosted</string>
    <string name="brand_new">Brand New</string>
    <string name="location_sample">Circle, Greater Accra</string>
    <string name="location_icon">location icon</string>
    <string name="ghc_20">GHC 20</string>
    <string name="product_name_sample">Logitech G432 Headphones</string>
    <string name="price">Price</string>
    <string name="subcategory">Subcategory</string>
    <string name="no_result">No results found, try another prompt</string>
    <string name="no_feedback">No feedback found for this user</string>
    <string name="no_ads">No Ads to show</string>
    <string name="no_wishlist">No items in your wishlist. Keep Browsing</string>
    <string name="add_to_wishlist">Add to wishlist</string>
    <string name="call_now">Call Now</string>
    <string name="lorem_ipsum">After years spent trying to make it as an actress and an advertising professional, Sister Monica Clare realized she was deeply unhappy and had spent her life doing what others had told her to do.</string>
    <string name="view_feedback">View Feedback</string>
    <string name="view_Vendor">View Vendor\'s Ads\n</string>
    <string name="their_ads">Their Ads</string>
    <string name="no_rating">No Rating</string>
    <string name="please_add_at_least_one_photo">Please add at least one photo</string>
    <string name="title">Title*</string>
    <string name="negotiable">Negotiable</string>
    <string name="price_">Price*</string>
    <string name="delivery">Delivery</string>
    <string name="name">Name*</string>
    <string name="boost_plan">Boost Plan</string>
    <string name="standard_plan">Standard Plan</string>
    <string name="choose_your_plan">Choose your plan!</string>
    <string name="post_ad">Post Ad!</string>
    <string name="free">Free</string>
    <string name="selected_image">selected image</string>
    <string name="type">Type*</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="configuration">Configuration*</string>
    <string name="output_power">Output Power (Watts)*</string>
    <string name="power">Power (Watts)</string>
    <string name="power_demand">Power Demand (Watts)*</string>
    <string name="device_interface">Device Interface</string>
    <string name="connectivity">Connectivity</string>
    <string name="cable_length">Cable Length</string>
    <string name="color">Color</string>
    <string name="screen_size">Screen Size (inches)</string>
    <string name="exchange">Exchange Available</string>
    <string name="leave_your_feedback">Leave your Feedback</string>
    <string name="choose_a_rating">Choose a rating</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="active">Active</string>
    <string name="_0">0</string>
    <string name="pending">Pending</string>
    <string name="drafts">Drafts</string>
    <string name="declined">Declined</string>
    <string name="close_ad">Close Ad</string>
</resources>