<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/home"
        app:cnb_iconColor = "@color/white"
        app:cnb_textColor = "@color/white"
        app:cnb_backgroundColor = "@color/ace_orange"   />

    <item
        android:id="@+id/wishlistFragment"
        android:title="@string/wishlist"
        android:icon="@drawable/wishlist"
        app:cnb_iconColor = "@color/white"
        app:cnb_textColor = "@color/white"
        app:cnb_backgroundColor = "@color/ace_orange"/>

    <item
        android:id="@+id/newAdFragment"
        android:title="@string/new_ad"
        android:icon="@drawable/add"
        app:cnb_iconColor = "@color/white"
        app:cnb_textColor = "@color/white"
        app:cnb_backgroundColor = "@color/ace_orange"/>

    <item
        android:id="@+id/settingsFragment"
        android:title="@string/settings"
        android:icon="@drawable/setting"
        app:cnb_iconColor = "@color/white"
        app:cnb_textColor = "@color/white"
        app:cnb_backgroundColor = "@color/ace_orange"/>

</menu>