<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">

    <ImageView
        android:id="@+id/logoIV"
        android:layout_width="160dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/ace_logo"
        android:padding="0dp"
        android:src="@drawable/ace_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTIL"
        style="@style/outlined_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="120dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoIV">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailET"
            style="@style/outlined_tiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_book"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/resend_email_verBn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resend_verification"
        app:icon="@drawable/retry"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTIL"
        android:visibility="gone"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTIL"
        style="@style/outlined_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resend_email_verBn"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/ace_orange">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordET_"
            style="@style/outlined_tiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_book"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_passwordTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/avenir_book"
        android:paddingHorizontal="5dp"
        android:paddingVertical="5dp"
        android:text="@string/forgot_password"
        android:textColor="@color/ace_orange"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/passwordTIL"
        app:layout_constraintTop_toBottomOf="@+id/passwordTIL" />

    <!--login button-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBn"
        style="@style/button_primary"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/avenir_black"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@+id/forgot_passwordTV"
        tools:layout_editor_absoluteX="20dp" />

    <!--signUp prompt-->
    <TextView
        android:id="@+id/signup_promptTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/avenir_book"
        android:paddingHorizontal="5dp"
        android:paddingVertical="5dp"
        android:text="@string/dont_have_an_accont_signup"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBn" />

    <TextView
        android:id="@+id/orTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/avenir_black"
        android:paddingHorizontal="5dp"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_promptTV" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/google_loginBn"
        style="@style/button_secondary"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/avenir_black"
        android:text="@string/login_google"
        app:icon="@drawable/google_logo"
        app:layout_constraintTop_toBottomOf="@+id/orTV" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mail_linkBn"
        style="@style/button_secondary"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/avenir_black"
        android:text="@string/login_email_link"
        app:icon="@drawable/sms"
        app:iconTint="@color/ace_secondary_variant"
        app:layout_constraintTop_toBottomOf="@+id/google_loginBn" />
</androidx.constraintlayout.widget.ConstraintLayout>