<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    app:cardCornerRadius="15dp"
    android:layout_marginTop="10dp"
    android:backgroundTint="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/product_imageIV"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/headphonesample"
            android:scaleType="centerCrop"
            android:layout_weight="2"
            android:contentDescription="@string/product_image"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/boostedTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_black"
                android:text="@string/boosted"
                android:textColor="@color/ace_orange"
                android:textSize="14sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="10dp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/titleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/avenir_black"
                android:text="@string/product_name_sample"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/boostedTV" />

            <TextView
                android:id="@+id/priceTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/avenir_black"
                android:text="@string/ghc_20"
                android:textColor="@color/ace_orange"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleTV" />

            <TextView
                android:id="@+id/conditionTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@drawable/searchview_bg"
                android:fontFamily="@font/avenir_book"
                android:paddingHorizontal="6dp"
                android:paddingVertical="2dp"
                android:text="@string/brand_new"
                android:textColor="@color/ace_secondary_variant"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/priceTV" />

            <LinearLayout
                android:id="@+id/locLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/conditionTV"
                android:layout_marginTop="3dp"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/location"
                    app:tint="@color/ace_secondary_variant"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/location_icon" />

                <TextView
                    android:id="@+id/locationTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_book"
                    android:text="@string/location_sample"
                    android:textColor="@color/ace_secondary_variant"
                    android:textSize="13sp"
                    android:layout_marginStart="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/priceTV" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/closeBn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_black"
                android:text="@string/close_ad"
                android:textAllCaps="false"
                android:textSize="14sp"
                app:cornerRadius="15dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>



</androidx.cardview.widget.CardView>