<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp">
        <androidx.cardview.widget.CardView
            android:id="@+id/set1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardCornerRadius="15dp"
            android:backgroundTint="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/personal_detailsBn"
                    style="@style/button_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_details"
                    android:fontFamily="@font/avenir_black"
                    app:icon="@drawable/user_edit"/>
                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/business_detailsBn"
                    style="@style/button_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/business_details"
                    android:fontFamily="@font/avenir_black"
                    app:icon="@drawable/briefcase"/>
                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/change_emailBn"
                    style="@style/button_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/change_email"
                    android:fontFamily="@font/avenir_black"
                    app:icon="@drawable/sms_edit"/>
                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>
                <com.google.android.material.button.MaterialButton
                    style="@style/button_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/my_ads"
                    android:fontFamily="@font/avenir_black"
                    app:icon="@drawable/trend"/>
                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>
                <com.google.android.material.button.MaterialButton
                    style="@style/button_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/my_feedback"
                    android:fontFamily="@font/avenir_black"
                    app:icon="@drawable/award"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/set2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/set1"
            app:cardCornerRadius="15dp"
            android:backgroundTint="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/give_feedbackBn"
                    style="@style/button_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/give_feedback"
                    android:fontFamily="@font/avenir_black"
                    app:icon="@drawable/message"/>
                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/about_usBn"
                    style="@style/button_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us"
                    android:fontFamily="@font/avenir_black"
                    app:icon="@drawable/info"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/set3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/set2"
            app:cardCornerRadius="15dp"
            android:backgroundTint="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/change_passwordBn"
                    style="@style/button_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/change_password"
                    android:fontFamily="@font/avenir_black"
                    app:icon="@drawable/lock"/>
                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/logoutBn"
                    style="@style/button_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:fontFamily="@font/avenir_black"
                    app:icon="@drawable/logout"/>
                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/delete_accountBn"
                    style="@style/button_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_my_account"
                    android:fontFamily="@font/avenir_black"
                    app:icon="@drawable/trash"
                    app:iconTint="@color/ace_error"
                    android:textColor="@color/ace_error"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

       </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>